# AgentTest

./: .gitignore  README.md  philosopher_agents.py  pyproject.toml  setup.ps1  setup.py  setup.sh
