[project]
name = "philosopher-agents"
version = "0.1.0"
description = "Multi-agent philosophical discussions powered by local LLMs (Ollama), with optional text-to-speech."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
]

[tool.uv]
package = false
